mobius/mobiusview/templates/ingress/mobiusview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobiusview-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /mobius$1
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "session-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "false"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-path: /mobius
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - <MOBIUS_VIEW_URL>
    secretName: <MOBIUS_VIEW_URL_SECRET>  
  - hosts:
    - <MOBIUS_VIEW_URL2>
    secretName: <MOBIUS_VIEW_URL2_SECRET>
  rules:
  - host: <MOBIUS_VIEW_URL>
    http:
      paths:
        - path: /mobius(.*)$
          pathType: ImplementationSpecific
          backend:
            service:
              name: mobiusview
              port:
                number: 80
  - host: <MOBIUS_VIEW_URL2>
    http:
      paths:
        - path: /mobius(.*)$
          pathType: ImplementationSpecific
          backend:
            service:
              name: mobiusview
              port:
                number: 80
